# OMCas9Tools

./: CMakeLists.txt  LICENSE  README.md  build.sh
release/: CMakeCache.txt  Makefile  cmake_install.cmake
release/src/: Makefile  cmake_install.cmake
scripts/: align_stats.py  convert_gRNAinfo_binary2str.py
src/: CMakeLists.txt  DNASeq.cpp  DNASeq.h  Params.h  SeqIO.cpp  SeqIO.h  align_stats.h  base.cpp  base.h  find_20merNGG.h  insilico_digest.h  kmer.h  main.cpp
